--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     </button>
     
     <ul>
-      <li class=log><a href="https://cuttly.pro/klik-disini" target="_blank" rel="noopener noreferrer"><strong>MASUK PAPUWA4D</strong></a></li>
-      <li class=reg><a href="https://cuttly.pro/papuaa4d" target="_blank" rel="noopener noreferrer"><strong>MASUK PAPUA4D</strong></a></li>
+      <li class=log><a href="https://cuttly.pro/klik-disini" target="_blank" rel="noopener noreferrer"><strong>PAPUWA4D</strong></a></li>
+      <li class=reg><a href="https://cuttly.pro/papuaa4d" target="_blank" rel="noopener noreferrer"><strong>PAPUA4D</strong></a></li>
     </ul>
   </div>
 </amp-sidebar>
@@ -137,8 +137,8 @@
           <p class=hrbrand><span class=b1>PAPUA</span><span class=b2>4D</span></p>
           <p class=hrjg>SITUS GAME TERPERCAYA</p>
           <div class=hrbtn>
-            <a href="https://cuttly.pro/klik-disini" class=btn1 target="_blank" rel="noopener noreferrer nofollow">MASUK PAPUWA4D</a>
-            <a href="https://cuttly.pro/papuaa4d" class=btn2 target="_blank" rel="noopener noreferrer nofollow">MASUK PAPUA4D</a>
+            <a href="https://cuttly.pro/klik-disini" class=btn1 target="_blank" rel="noopener noreferrer nofollow">PAPUWA4D</a>
+            <a href="https://cuttly.pro/papuaa4d" class=btn2 target="_blank" rel="noopener noreferrer nofollow">PAPUA4D</a>
           </div>
         </div>
       </div>
